GP-0: Enabling illegal reflective accesses in tests